<resources>
    <!--splash-->
    <string name="app_name">Somali Guidy </string>
    <string name="logo_name">Get A Way </string>
    <string name="slogan_name">We Will Help You </string>
    <string name="powered_by">powered by Mohammad  </string>

    <!--    OnBoarding-->

    <string name="first_slid_title">Search your Location </string>
    <string name="second_slid_title">Make A Call </string>
    <string name="third_slid_title">Add Missing Place </string>
    <string name="fourth_slid_title">Sit Back and Enjoy </string>

    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related shops to match your search. </string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well.</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by following simple steps.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you don not have to worry about anything.  </string>
    <!--button-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>

    <!--    categories-->
    <string name="hotel">Hotel</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>


    <!--    titles-->

    <string name="featured_location">All Featured Location</string>
    <string name="featured_location_description">All the Location that are featured and have the top demand in town</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="view_all">View ALL</string>
    <string name="categories"> Categories</string>
    <string name="search_text"> Search</string>
    <string name="profile"> Profile</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <string name="add">Add missing please</string>
    <string name="Add">Add</string>
    <string name="all_categories">All Categories</string>
    <string name="login">LogIn</string>
    <string name="logout">Log out</string>
    <string name="car_rent">Car Rent</string>
    <string name="hospitals">Hospitals</string>


    <!--Retailer screen -->
    <string name="sing_up">Sing Up</string>
    <string name="retailer_header">Grow\n you Business</string>
    <string name="retailer_tag_line">We will help you grow your business using online services</string>
    <string name="create_account"> Create Account</string>
    <string name="how_we_work">How we Work</string>
    <string name="remember_me">Remember Me</string>
    <string name="username"> Enter Username</string>
    <string name="password"> Enter Password</string>
    <string name="new_password"> Enter new Password</string>
    <string name="confirm_password"> Confirm Password</string>
    <string name="updated_password"> Updated Password</string>
    <string name="updated_password_msg"> Your password Updated successfully</string>
    <string name="full_name"> Enter Full Name</string>
    <string name="email"> Email</string>
    <string name="next"> Next</string>
    <string name="choose_gender"> choose Gender</string>
    <string name="select_your_age"> Select your Age</string>
    <string name="male"> Male</string>
    <string name="female"> Female</string>
    <string name="other"> Other</string>
    <string name="phone"> Phone Number</string>
    <string name="sign_in_with"> or Sing in with</string>
    <string name="Google"> Google</string>

    <!--    OTP-->
    <string name="otp_code_text"> CO\nDE</string>
    <string name="otp_description_text"> Enter one time password sent on\n</string>
    <string name="otp_verification_text"> Verification</string>
    <string name="verify_code"> Verify Code</string>

    <!--  forget password-->

    <string name="forget_password"> Forget Password</string>
    <string name="forget_password_desc"> Provide your account email for which you want to restart your password</string>
    <string name="make_selection"> Make\nSelection</string>
    <string name="make_selection_detail"> Select which Contact detail should we use to reset your password</string>
    <string name="via_sms"> via sms:</string>
    <string name="via_email"> via email:</string>
    <string name="via_email_support"> support@gmail.com</string>
    <string name="new_credentials"> New\nCredential</string>
    <string name="new_credentials_desc">Your identity has been verified\nSet your new password </string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="facebook_app_id">404091907291774</string>
    <string name="fb_login_protocol_scheme">fb404091907291774</string>
    <string name="add_your_location">Add your Location</string>


    <string name="rate_dialog_title">Rate this app</string>
    <string name="rate_dialog_message">If you enjoy playing this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
    <string name="rate_dialog_ok">Rate It</string>
    <string name="rate_dialog_cancel">Remind Me Later</string>
    <string name="rate_dialog_no">No, Thanks</string>


    <!--    <string-array name="categories">-->

    <!--        <item>  Hotel </item>-->
    <!--        <item>  Restaurants </item>-->
    <!--        <item>  Hospital </item>-->
    <!--        <item>  Bank </item>-->
    <!--        <item>  Car </item>-->
    <!--        <item>  House </item>-->

    <!--    </string-array>-->

    <string name="album_name_all">All Media</string>

    <string name="button_preview">Preview</string>
    <string name="button_apply_default">Apply</string>
    <string name="button_apply">Apply(%1$d)</string>
    <string name="button_back">Back</string>
    <string name="photo_grid_capture">Camera</string>
    <string name="empty_text">No media yet</string>
    <string name="button_ok">OK</string>

    <string name="error_over_count_default">You have reached max selectable</string>
    <string name="error_over_count">You can only select up to %1$d media files</string>
    <string name="error_under_quality">Under quality</string>
    <string name="error_over_quality">Over quality</string>
    <string name="error_file_type">Unsupported file type</string>
    <string name="error_type_conflict">Can\'t select images and videos at the same time</string>
    <string name="error_no_video_activity">No App found supporting video preview</string>
    <string name="error_over_original_size">Can\'t select the images larger than %1$d MB</string>
    <string name="error_over_original_count">%1$d images over %2$d MB. Original will be unchecked</string>
    <string name="button_original">Original</string>
    <string name="button_sure_default">Sure</string>
    <string name="button_sure">Sure(%1$d)</string>
    <string name="title_activity_retrive_maps">Map</string>
    <string name="title_activity_maps">Map</string>

    <string name="service_not_available">Service not available ..check network connection</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">address found</string>
    <string name="not_support_area">This area is not supported yet</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="search_place">Search a place</string>
    <string name="confirm_pickup">Confirm pickup</string>
    <string name="confirm_dest">Confirm destination</string>
    <string name="failed_select_location">failed to select location please try again</string>
    <string name="places_api_key">AIzaSyA9BlFIBk3XOM5iB7Oj7_rto47JmwQ9QNc</string>
    <string name="action_geolocate">Pick Place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
</resources>