<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <item android:title="@string/home">-->
<!--        <menu>-->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            app:cnb_backgroundColor="@color/card1"
            android:title="@string/home"/>
        <!--<item
            android:id="@+id/nav_search"
            android:icon="@drawable/search_icon"
            android:title="@string/search_text"/>-->
        <item
            android:id="@+id/nav_all_categories"
            android:icon="@drawable/category_icon"
            android:title="@string/all_categories"/>
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/add_black"
            android:title="@string/add"/>
    </group>
<!--        </menu>-->
<!--    </item>-->

<!--    <item android:title="@string/profile">-->
<!--<menu>-->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/login_icon"
            android:title="@string/login"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile_icon"
            android:title="@string/profile"/>
       <!-- <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/login_icon"
            android:title="@string/logout"/>-->

    </group>
<!--</menu>-->
<!--    </item>-->

<!--
<item android:title="@string/language">

        <menu>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/language_icon"
            android:title="@string/language"
            />


    </group>

</menu>
    </item>
-->


<item android:title="@string/settings">

        <menu>
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_Settings"
            android:icon="@drawable/profile_icon"
            android:title="@string/settings"/>

        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/language_icon"
            android:title="@string/language"
            />
        <item
            android:icon="@drawable/share_icon"
            android:id="@+id/nav_share"
            android:title="@string/share" />
        <item
            android:icon="@drawable/rate_us_icon"
            android:id="@+id/nav_rate_us"
            android:title="@string/rate_us" />
        <item
            android:icon="@drawable/about_us_black"
            android:id="@+id/nav_about_us"
            android:title="About_us" />
    </group>

</menu>
    </item>

<!--
    <item android:title="@string/share">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:icon="@drawable/share_icon"
                    android:id="@+id/nav_share"
                    android:title="@string/share" />
                <item
                    android:icon="@drawable/rate_us_icon"
                    android:id="@+id/nav_rate_us"
                    android:title="@string/rate_us" />
            </group>
        </menu>
    </item>
-->

</menu>

