<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_nav_home"
        android:icon="@drawable/home_icon"
        android:title="@string/home"

        app:cnb_backgroundColor="@color/card1" />
    <item
        android:id="@+id/bottom_nav_search"
        android:icon="@drawable/search_icon"
        android:title="@string/search_text"
        app:cnb_backgroundColor="@color/card2" />

    <item
        android:id="@+id/bottom_nav_add"
        android:icon="@drawable/add_icon"
        android:title="@string/Add"
        app:cnb_backgroundColor="@color/card3" />
    <!-- <item
         android:id="@+id/bottom_nav_favorite"
         android:icon="@drawable/category_icon"
         android:title="Categories" />
 -->
    <item
        android:id="@+id/bottom_nav_profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile"
        app:cnb_backgroundColor="@color/card4" />

</menu>