<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightWhite"
    android:padding="30dp"
    android:orientation="vertical"
    tools:context=".Common.LoginSignUp.ForgetSuccessMessage">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/updated_password"
            android:textSize="40sp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="-100dp"
            android:fontFamily="@font/muli_bold"/>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ok_icon"
            android:layout_margin="25dp"
            android:layout_gravity="center"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updated_password_msg"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
           />
        
        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:gravity="center"/>

    </LinearLayout>


</LinearLayout>