<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightWhite"
    tools:context=".Common.LoginSignUp.ForgetPassword">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/forget_password_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_icon"
            />

        <ImageView
            android:id="@+id/forget_password_screen_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/lock_icon"
            android:padding="25dp"/>

        <TextView
            android:id="@+id/forget_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:textSize="30dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:includeFontPadding="false"
            android:fontFamily="@font/muli_black"/>

        <TextView
            android:id="@+id/forget_password_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password_desc"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:includeFontPadding="false"
            android:fontFamily="@font/muli_extralight"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forget_password_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/email"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/mail_icon"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:background="@color/banner_background"
                android:textColor="@color/black" />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forget_password_next_btn"
            android:onClick="callPasswordUpdateScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/next"
            android:textColor="@color/black"
            android:textAllCaps="true"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:padding="20dp"
            android:visibility="gone"
            >
                <ProgressBar
                    android:id="@+id/progress_pv_linear_colors"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    />
        </RelativeLayout>
    </LinearLayout>


</ScrollView>