<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightWhite"
    tools:context=".Common.LoginSignUp.Set_New_Password">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:id="@+id/set_password_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_icon" />

        <ImageView
            android:id="@+id/set_password_screen_icon"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:src="@drawable/new_password_icon" />

        <TextView
            android:id="@+id/set_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/new_credentials"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/set_password_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/new_credentials_desc"
            android:textAlignment="center"
            android:textSize="20sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/set_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:hint="@string/new_password"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:startIconDrawable="@drawable/lock_2_96px"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/set_password_confirm"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:startIconDrawable="@drawable/lock_2_96px"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />


        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/set_password_ok"
            android:onClick="callUpdatedScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Update"
            android:background="@color/colorPrimary"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"/>
    </LinearLayout>


</ScrollView>